feat: add expense_form and model validations

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
 
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  .btn__primary {
+    @apply grid place-items-center border-2 border-stone-950 rounded-lg px-6 py-2 shadow-retro__dark;
   }
 }
 
-*/
