--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,3 +1,17 @@
-<div>
+<div class="text-3xl underline">
   <h1>Expenses</h1>
 </div>
+
+<%= link_to "Add Expense", new_expense_path, class: "btn__primary" %>
+
+<div>  
+  <% @expenses.each do |expense| %>
+  <div class="flex flex-col">
+    <%= expense.date %>
+    <%= expense.amount %>
+    <%= expense.expense_item %>
+    <%= expense.remarks %>    
+  </div>
+  <% end %>
+</div>
+
