style: add base styling for form view

--- a/app/views/expenses/_expense_form.html.erb
+++ b/app/views/expenses/_expense_form.html.erb
@@ -1,34 +1,40 @@
 <%= form_with model: @expense do |form| %>  
+<div class="w-full h-full flex flex-col justify-center gap-3 sm:gap-[1.5rem]">
   <% if @expense.errors.any? %>    
-    <% @expense.errors.full_messages.each do |message| %>
-      <p class="text-red-500 text-xs lowercase">
-        ** <%= message %>
-      </p>
-    <% end %>  
+    <div class="flex flex-col justify-center">
+      <% @expense.errors.full_messages.each do |message| %>
+        <p class="text-red-500 text-fSize__sm lowercase font-semibold">
+          ** <%= message %>
+        </p>
+      <% end %>  
+    </div>
   <% end %>
   
-  <div class="flex flex-col gap-2">
-    <div>
-      <%= form.label "Date:" %>
-      <%= form.date_field :date %>
+  <div class="h-full w-full flex flex-col gap-2">
+    <div class="input__block">
+      <%= form.label "Date:", class:"input__label" %>
+      <%= form.date_field :date, class:"input__field" %>
     </div>
 
-    <div>
-      <%= form.label "Expense Item:" %>
-      <%= form.text_field :expense_item %>
+    <div class="input__block">
+      <%= form.label "Expense Item:", class:"input__label" %>
+      <%= form.text_field :expense_item, class:"input__field" %>
     </div>
 
-    <div>
-      <%= form.label "Amount:" %>
-      <%= form.text_field :amount %>
+    <div class="input__block">
+      <%= form.label "Amount:", class:"input__label" %>
+      <%= form.text_field :amount, class:"input__field" %>
     </div>
 
-    <div>
-      <%= form.label "Remarks:" %>
-      <%= form.text_field :remarks %>
+    <div class="input__block">
+      <%= form.label "Remarks:", class:"input__label" %>
+      <%= form.text_area :remarks, class:"input__field resize-none h-1/5" %>
     </div>
-
-    <%= form.button "Submit", class: "btn__primary" %>
-    <%= link_to "Home", expenses_path, class: "btn__primary" %>
   </div>  
+
+  <div class="w-full flex flex-col justify-center items-center gap-3">
+    <%= form.button "Submit", class:"btn__primary font-semibold" %>
+    <%= link_to "Home", expenses_path, class:"btn__primary font-bold border-2 border-stone-950" %>
+  </div>
+</div>
 <% end %>
