--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,8 +1,8 @@
-<div class="text-3xl underline">
+<div class="text-3xl">
   <h1>Expenses</h1>
 </div>
 
-<%= link_to "Add Expense", new_expense_path, class: "btn__primary" %>
+<%= link_to "Add Expense", new_expense_path, class:"btn__primary" %>
 
 <div>  
   <% @expenses.each do |expense| %>
