--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,11 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-@layer components {
-  .btn__primary {
-    @apply grid place-items-center border-2 border-stone-950 rounded-lg px-6 py-2 shadow-retro__dark;
+@layer base {
+  html {
+    font-family: "Space Mono", monospace;
+    text-decoration: none;
+    letter-spacing: 0.1rem;
   }
 }
 
+@layer components {
+  .btn__primary {
+    @apply w-full sm:w-1/3 grid place-items-center border-2 border-stone-950 rounded-lg px-6 py-2 shadow-retro__dark uppercase tracking-wider;
+  }
+
+  .input__field {
+    @apply w-full border-2 border-stone-700 border-dashed outline-none rounded-lg bg-transparent text-fSize__lg focus:border-solid;
+  }
+
+  .input__label {
+    @apply text-fSize__lg sm:w-1/4 font-semibold;
+  }
+
+  .input__block {
+    @apply flex flex-col sm:flex-row gap-2 sm:gap-4 sm:items-center;
+  }
+}
+
+.field_with_errors {
+  width: 100%;
+}
