--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,17 +1,57 @@
-<div class="text-3xl">
-  <h1>Expenses</h1>
-</div>
-
-<%= link_to "Add Expense", new_expense_path, class:"btn__primary" %>
-
-<div>  
-  <% @expenses.each do |expense| %>
-  <div class="flex flex-col">
-    <%= expense.date %>
-    <%= expense.amount %>
-    <%= expense.expense_item %>
-    <%= expense.remarks %>    
+<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
+  <div class="group">
+    <%= link_to "Add Expense", new_expense_path, class:"tab" %>
   </div>
-  <% end %>
-</div>
+  
+  <div class="flex gap-2">  
+    <div class="w-4 aspect-1 rounded-full border-2 border-stone-950 bg-stone-950 shadow-retro__circle"></div>
+    <div class="w-4 aspect-1 rounded-full border-2 border-stone-950 shadow-retro__circle"></div>
+    <div class="w-4 aspect-1 rounded-full border-2 border-stone-950 shadow-retro__circle"></div>
+  </div>
+</header>
 
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
+
+  <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
+    <h1>Expenses</h1>
+  </div>
+
+  <div class="border-2 border-stone-950 border-dashed w-5/6 h-auto rounded-lg">  
+    <table class="min-w-full divide-y divide-stone-600">
+      <thead class="bg-stone-700">
+        <tr>
+          <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
+            Date
+          </th>
+          <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
+            Amount
+          </th>
+          <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
+            Expense Item
+          </th>
+          <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
+            Remarks
+          </th>
+        </tr>
+      </thead>
+      <tbody class="divide-y divide-stone-600 divide-dashed">
+        <% @expenses.each do |expense| %>
+          <tr>
+            <td class="px-6 py-4 whitespace-nowrap">
+              <div class="text-sm text-gray-900"><%= expense.date %></div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+              <div class="text-sm text-gray-900"><%= expense.amount %></div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+              <div class="text-sm text-gray-900"><%= expense.expense_item %></div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+              <div class="text-sm text-gray-900"><%= expense.remarks %></div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</section>
