--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,8 @@
   </head>
 
   <body class="bg-stone-200">
-    <main class="bg-stone-200 w-screen h-screen flex flex-col justify-center items-center">
-      <header class="h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-end items-center gap-2 px-4">
-        <div class="w-4 aspect-1 rounded-full border-2 border-stone-950 bg-stone-950 shadow-retro__circle"></div>
-        <div class="w-4 aspect-1 rounded-full border-2 border-stone-950 shadow-retro__circle"></div>
-        <div class="w-4 aspect-1 rounded-full border-2 border-stone-950 shadow-retro__circle"></div>
-      </header>
-      <section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
-        <%= yield %>
-      </section>
-      
+    <main class="relative bg-stone-200 w-full h-screen flex flex-col items-center">
+      <%= yield %>     
     </main>
   </body>
 </html>
