style: fix edit view

--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -12,8 +12,8 @@
 
 <section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
 
-  <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold"></div>
-    <h1>Add Expense</h1>
+  <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
+    <h1>EDIT</h1>
   </div>
 
   <div class="w-full sm:w-1/2 h-full px-2 sm:py-2">
