--- a/app/views/expenses/_expense_form.html.erb
+++ b/app/views/expenses/_expense_form.html.erb
@@ -32,7 +32,7 @@
     </div>
   </div>  
 
-  <div class="w-full flex flex-col justify-center items-center gap-3">
+  <div class="w-full flex flex-col justify-center items-center gap-3 mt-4">
     <%= form.button "Submit", class:"btn__primary font-semibold" %>
   </div>
 </div>
