--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -32,6 +32,10 @@
           <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
             Remarks
           </th>
+          <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
+          </th>
+          <th scope="col" class="px-6 py-3 text-left text-fSize__sm font-medium text-stone-50 uppercase tracking-wider">
+          </th>
         </tr>
       </thead>
       <tbody class="divide-y divide-stone-600 divide-dashed">
@@ -48,6 +52,12 @@
             </td>
             <td class="px-6 py-4 whitespace-nowrap">
               <div class="text-sm text-gray-900"><%= expense.remarks %></div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+              <div class="text-sm text-gray-900"><%= link_to "Edit", edit_expense_path(expense) %></div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+              <div class="text-sm text-gray-900"><%= link_to "Delete", expense_path(expense), data: {turbo_method: :delete, turbo_confirm: "Do you want to permanently delete this expense item?"} %></div>
             </td>
           </tr>
         <% end %>
