--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -10,7 +10,7 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center gap-4 px-4 py-2">
 
   <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>Add Expense</h1>
@@ -18,6 +18,6 @@
 
   <div class="w-full sm:w-1/2 h-full px-2 sm:py-2">
     <%= render partial: "expense_form", locals: {expense: @expense} %>
-
+  </div>
 </section>
 
