--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -19,11 +19,11 @@
   }
 
   .input__field {
-    @apply w-full border-2 border-stone-700 border-dashed outline-none rounded-lg bg-transparent text-fSize__lg focus:border-solid;
+    @apply w-full border-2 border-stone-700 border-dashed outline-none rounded-lg bg-transparent text-fSize__md focus:border-solid;
   }
 
   .input__label {
-    @apply text-fSize__lg sm:w-1/4 font-semibold;
+    @apply text-fSize__md sm:w-1/4 font-semibold;
   }
 
   .input__block {
@@ -32,6 +32,14 @@
 
   .tab {
     @apply border-r-4 border-stone-950 py-4 px-6 h-full font-semibold hover:bg-stone-300 hover:border-4 hover:py-3;
+  }
+
+  .table__header {
+    @apply px-6 py-3 text-fSize__sm font-medium text-stone-50 uppercase tracking-wider text-center;
+  }
+
+  .table__row {
+    @apply px-6 py-4 whitespace-nowrap;
   }
 }
 
