--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,6 +1,9 @@
 <header class="sticky inset-0 z-20 h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
   <div class="group">
-    <%= link_to "Home", expenses_path, class:"tab" %>
+    <%= link_to expenses_path, class:"tab" do %>
+    <i class="fa-solid fa-house"></i>
+    <span>Home</span>
+    <% end %>
   </div>
   
   <div class="flex gap-2">  
