--- a/app/views/expenses/_expense_form.html.erb
+++ b/app/views/expenses/_expense_form.html.erb
@@ -23,7 +23,7 @@
 
     <div class="input__block">
       <%= form.label "Amount:", class:"input__label" %>
-      <%= form.text_field :amount, class:"input__field" %>
+      <%= form.number_field :amount, min: "0.01", step: "0.01", class:"input__field" %>
     </div>
 
     <div class="input__block">
