--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -39,7 +39,7 @@
   }
 
   .table__row {
-    @apply px-6 py-4 whitespace-nowrap;
+    @apply px-6 py-4 whitespace-nowrap text-sm text-gray-900;
   }
 }
 
