--- a/app/views/expenses/monthly_expenses.html.erb
+++ b/app/views/expenses/monthly_expenses.html.erb
@@ -1,5 +1,5 @@
 <header class="sticky inset-0 z-20 h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
-  <div class="flex justify-center items-center gap-1">      
+  <div class="flex justify-center items-center">      
     <%= link_to expenses_path, class:"tab" do %>
     <i class="fa-solid fa-house"></i>
     <span>Home</span>
@@ -21,67 +21,7 @@
 
   <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1><%= @expenses.first.date.strftime("%B %Y") %></h1>
-  </div>  
-
-  <p class="font-bold fSize__lg text-stone-900">
-    Total:
-    <%= number_to_currency(@total_amount, precision: 2, unit: "PHP ") %>
-  </p>
-
-  <div class="w-fit h-auto grid place-items-center border-4 border-stone-950 rounded-xl shadow-retro__dark">  
-    <table class="table-auto divide-y divide-stone-600 ">
-      <thead class="bg-stone-700">
-        <tr>
-          <th scope="col" class="table__header">
-            Date
-          </th>
-          <th scope="col" class="table__header">
-            Amount
-          </th>
-          <th scope="col" class="table__header">
-            Expense Item
-          </th>
-          <th scope="col" class="table__header">
-          </th>
-          <th scope="col" class="table__header">
-          </th>
-          <th scope="col" class="table__header">
-            Remarks
-          </th>
-        </tr>
-      </thead>
-      <tbody class="divide-y-2 divide-stone-600 divide-dashed">
-        <% @expenses.each do |expense| %>
-          <tr>
-            <td class="table__row">
-              <%= expense.date %>
-            </td>
-            <td class="table__row font-semibold">
-              <%= number_to_currency(expense.amount, precision: 2, unit: "₱ ") %>
-            </td>
-            <td class="table__row font-semibold">
-              <%= link_to expense.expense_item, expenses_month_path(month: expense.date.beginning_of_month) %>
-            </td>
-            <td class="table__row">
-              <div class="text-sm text-gray-900 p-2 rounded-lg border-2 hover:border-stone-800">
-                <%= link_to edit_expense_path(expense) do %>
-                  <i class="fa-solid fa-pen-to-square"></i>
-                <% end %>
-              </div>
-            </td>
-            <td class="table__row">
-              <div class="text-sm text-gray-900 p-2 rounded-lg border-2 hover:border-red-500">
-                <%= link_to expense_path(expense), data: { turbo_method: :delete, turbo_confirm: "Do you want to permanently delete this expense item?" } do %>
-                  <i class="fas fa-trash-alt text-red-500"></i>
-                <% end %>
-              </div>
-            </td>
-            <td class="table__row">
-              <%= expense.remarks %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+  </div> 
+  
+  <%= render partial: "expenses_table" %>
 </section>
