fix: overflow-y issue css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,11 @@
         <% end %>
       </div>
 
-      <%= yield %>     
+      <section class="min-h-full w-full">
+        <%= yield %>
+      </section>
+
+          
     </main>
   </body>
 </html>
