--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,4 +1,4 @@
-<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
+<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
   <div class="">
     <%= link_to new_expense_path, class:"tab" do %>
       <i class="fa-solid fa-circle-plus"></i>
@@ -13,7 +13,7 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 min-h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
 
   <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>Expenses</h1>
