style: modify padding on section

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -13,9 +13,8 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 min-h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
-
-  <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 w-full flex flex-col items-center sm:gap-4 px-4 pb-10">
+  <div class="w-full sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>Expenses</h1>
   </div>
 
