--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -13,7 +13,7 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 py-2">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 pb-10">
   <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>EDIT</h1>
   </div>
