--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -2,7 +2,7 @@
   <div class="">
     <%= link_to new_expense_path, class:"tab" do %>
       <i class="fa-solid fa-circle-plus"></i>
-      <span>Add Expense</span>
+      <span class="hidden md:inline-block">Add Expense</span>
     <% end %>    
   </div>
   
@@ -13,10 +13,16 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 w-full flex flex-col items-center sm:gap-4 px-4 pb-10">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 w-full flex flex-col items-center px-4 pb-10">
   <div class="w-full sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>Expenses</h1>
   </div>
 
-  <%= render partial: "expenses_table" %>
+  <div class="hidden w-full lg:grid place-items-center">
+    <%= render partial: "expenses_table" %>
+  </div>
+
+  <div class="w-full grid place-items-center lg:hidden">
+    <%= render partial: "expenses_table_sm" %>
+  </div>  
 </section>
