--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,8 +1,8 @@
-<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
+<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
   <div class="group">
     <%= link_to expenses_path, class:"tab" do %>
     <i class="fa-solid fa-house"></i>
-    <span>Home</span>
+    <span class="hidden md:inline-block">Home</span>
     <% end %>
   </div>
   
