--- a/app/views/expenses/show_monthly_expenses.html.erb
+++ b/app/views/expenses/show_monthly_expenses.html.erb
@@ -1,12 +1,12 @@
-<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400/75 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
+<header class="sticky inset-0 z-20 h-16 w-full bg-stone-400 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
   <div class="flex justify-center items-center">      
     <%= link_to expenses_path, class:"tab" do %>
     <i class="fa-solid fa-house"></i>
-    <span>Home</span>
+    <span class="hidden md:inline-block">Home</span>
     <% end %>
     <%= link_to new_expense_path, class:"tab" do %>
       <i class="fa-solid fa-circle-plus"></i>
-      <span>Add Expense</span>
+      <span class="hidden md:inline-block">Add Expense</span>
     <% end %>  
   </div>
   
@@ -22,5 +22,11 @@
     <h1><%= @expenses.first.date.strftime("%B %Y") %></h1>
   </div> 
   
-  <%= render partial: "expenses_table" %>
+  <div class="hidden w-full lg:grid place-items-center">
+    <%= render partial: "expenses_table" %>
+  </div>
+
+  <div class="w-full grid place-items-center lg:hidden">
+    <%= render partial: "expenses_table_sm" %>
+  </div> 
 </section>
