--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,5 +1,5 @@
 <header class="sticky inset-0 z-20 h-16 w-full bg-stone-400 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
-  <div class="">
+  <div>
     <%= link_to new_expense_path, class:"tab" do %>
       <i class="fa-solid fa-circle-plus"></i>
       <span class="hidden md:inline-block">Add Expense</span>
@@ -13,10 +13,10 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 w-full flex flex-col items-center px-4 pb-10">
-  <div class="w-full sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 pb-10 overflow-y-auto">
+  <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>Expenses</h1>
-  </div>
+  </div> 
 
   <div class="hidden w-full lg:grid place-items-center">
     <%= render partial: "expenses_table" %>
@@ -24,5 +24,5 @@
 
   <div class="w-full grid place-items-center lg:hidden">
     <%= render partial: "expenses_table_sm" %>
-  </div>  
+  </div> 
 </section>
