--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,5 @@
 <header class="sticky inset-0 z-20 h-16 w-full bg-stone-400 border-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
-  <div class="group">
+  <div>
     <%= link_to expenses_path, class:"tab" do %>
     <i class="fa-solid fa-house"></i>
     <span class="hidden md:inline-block">Home</span>
@@ -13,10 +13,10 @@
   </div>
 </header>
 
-<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center gap-4 px-4 pb-10">
+<section class="border-b-4 border-r-4 border-l-4 border-stone-950 h-full w-full flex flex-col items-center sm:gap-4 px-4 pb-10 overflow-y-auto">
   <div class="w-full h-fit sm:p-2 grid place-items-center text-fSize__xl uppercase font-semibold">
     <h1>Add Expense</h1>
-  </div>
+  </div> 
 
   <div class="w-full sm:w-1/2 h-full px-2 sm:py-2">
     <%= render partial: "expense_form", locals: {expense: @expense} %>
