refactor: create partials for reusable layout components

--- a/app/views/expenses/_expense_form.html.erb
+++ b/app/views/expenses/_expense_form.html.erb
@@ -34,6 +34,7 @@
 
   <div class="w-full flex flex-col justify-center items-center gap-3 mt-4">
     <%= form.button "Submit", class:"btn__primary font-semibold" %>
+    <%= link_to "Back", :back, class:"btn__primary font-semibold" %>
   </div>
 </div>
 <% end %>
