--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,15 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-stone-200">
-    <main class="relative bg-stone-200 w-full h-screen flex flex-col items-center">
-       <div class="w-4/5 sm:w-1/5 h-auto absolute top-[3.5rem] right-[0.5rem] z-30 ">
-        <% flash.each do |type, message| %>
-          <% if type == "notice" %>
-            <div class="text-green-500 mt-2 py-2 px-4 rounded-lg text-xs tracking-wider font-semibold border-2 border-green-500 border-dashed bg-green-200">
-              ** <%= message %>
-            </div>            
-          <% else %>
-            <div class="text-red-500 mt-2 py-2 px-4 rounded-lg text-xs tracking-wider font-semibold border-2 border-red-500 border-dashed bg-red-200">
-              ** <%= message %>
-            </div>
-          <% end %>          
-        <% end %>
-      </div>
-
-      <%= yield %>
-
+  <body class="relative bg-stone-200 w-full min-h-dvh h-full flex flex-col items-center border-4 border-stone-950">
+    
+    <%= render partial: "layouts/navbar" %>
+    <%= render partial: "layouts/flash_messages" %>   
+    
+    <main class="relative bg-stone-200 w-full h-5/6 flex flex-col items-center justify-center">
+      <section class="h-full w-full flex flex-col items-center justify-center sm:gap-4 px-4 pb-10 ">
+        <%= yield %>
+      </section>
     </main>
   </body>
 </html>
