--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
 <nav class="sticky inset-0 z-20 h-16 w-full bg-stone-400 border-y-4 border-stone-950 flex justify-between items-center gap-2 pr-4">
   <div class="flex justify-center items-center">      
-    <% unless controller_name == 'expenses' && action_name == 'index' %>             
+    <% unless controller_name == "expenses" && action_name == "index" %>             
       <%= link_to expenses_path, class:"tab" do %>
         <i class="fa-solid fa-house"></i>
         <span class="hidden md:inline-block">Home</span>
       <% end %>
     <% end %>
-    <% unless controller_name == 'expenses' && action_name == 'new' %>             
+    <% unless controller_name == "expenses" && action_name == "new" %>             
       <%= link_to new_expense_path, class:"tab" do %>
         <i class="fa-solid fa-circle-plus"></i>
         <span class="hidden md:inline-block">Add Expense</span>
