--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -47,3 +47,47 @@
 .field_with_errors {
   width: 100%;
 }
+
+/* scrollbar */
+::-webkit-scrollbar { 
+  width: 1.15rem;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(231, 229, 228);
+  border: 2px solid rgb(12, 10, 9);
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.6);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(168, 162, 158);
+  border: 3px solid rgb(12, 10, 9);
+  border-radius: 0.25rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(168, 162, 158);
+}
+/* scrollbar - up arrow */
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+  width: 100%;
+  aspect-ratio: 1.15;
+  border: 2px solid rgb(12, 10, 9);
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath d='M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z'/%3E%3C/svg%3E") center;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:decrement:active {
+  color: rgb(128, 128, 128); 
+}
+
+/* scrollbar - down arrow */
+::-webkit-scrollbar-button:single-button:vertical:increment {
+  width: 100%;
+  aspect-ratio: 1.15;
+  border: 2px solid rgb(12, 10, 9);
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath d='M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z'/%3E%3C/svg%3E") center;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:increment:active {
+  color: rgb(128, 128, 128); 
+}
